# vigil

./: .gitignore  CODE_OF_CONDUCT.md  README.md  io.github.invarianz.vigil.yml  meson.build
.github/workflows/: benchmark.yml  build-test.yml  ci.yml  flatpak.yml  lint.yml  release.yml  validate.yml
data/: vigil-daemon-autostart.desktop  vigil-daemon.service  vigil.desktop.in  vigil.gschema.xml  vigil.metainfo.xml.in
po/: POTFILES  meson.build
src/: Application.vala  Config.vala.in  MainWindow.vala  MonitoringEngine.vala
src/Daemon/: DBusInterface.vala  Main.vala
src/Services/: EncryptionService.vala  GalaScreenshotBackend.vala  HeartbeatService.vala  IScreenshotBackend.vala  MatrixTransportService.vala  PortalScreenshotBackend.vala  SchedulerService.vala  ScreenshotService.vala  SecurityUtils.vala  StorageService.vala  TamperDetectionService.vala  UploadService.vala
src/Utils/: SessionDetector.vala
src/Widgets/: RangeScale.vala  SettingsView.vala  StatusView.vala
tests/: DBusServerTest.vala  EncryptionServiceTest.vala  HeartbeatServiceTest.vala  MatrixE2EEIntegrationTest.vala  MatrixTransportServiceTest.vala  MonitoringEngineTest.vala  PerformanceBenchmark.vala  SchedulerServiceTest.vala  ScreenshotServiceTest.vala  SessionDetectorTest.vala  StorageServiceTest.vala  TamperDetectionServiceTest.vala  TestUtils.vala  UploadServiceTest.vala  meson.build
vapi/: linux.vapi  olm.vapi  openssl.vapi
